Visualizing relationship between author and the number of fake news from them

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -317,8 +317,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Unreliable = 1\n",
-        "Reliable = 0"
+        "###Unreliable = 1\n",
+        "###Reliable = 0"
       ]
     },
     {
@@ -373,6 +373,114 @@
           },
           "execution_count": 55
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "lWSMnp2N28_5",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "** for_graph_fake Gives a relationship between authors and the number of 'unreliable' (fake) news from them.**"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "yYVD7qK7235_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "caa00283-ace2-4be8-f626-501496b11123"
+      },
+      "cell_type": "code",
+      "source": [
+        "for_graph_fake.head()"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>author</th>\n",
+              "      <th>label</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td># 1 NWO Hatr</td>\n",
+              "      <td>17</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-NO AUTHOR-</td>\n",
+              "      <td>54</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>10 Habits That Will Make Your Life Easier &amp;amp...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>10 More Beautiful Images That Remind You We St...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>10 Movies That Could Change Your Understanding...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                              author  label\n",
+              "0                                       # 1 NWO Hatr     17\n",
+              "1                                        -NO AUTHOR-     54\n",
+              "2  10 Habits That Will Make Your Life Easier &amp...      1\n",
+              "3  10 More Beautiful Images That Remind You We St...      1\n",
+              "4  10 Movies That Could Change Your Understanding...      1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "b8pKoLmT3YaQ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**Just one value in the graph, is above 100, this could have been a discrepancy**"
       ]
     },
     {
@@ -445,6 +553,16 @@
           },
           "execution_count": 57
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "qSR4m9FG3v9d",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**nlargest is used to get n largest values in a df**"
       ]
     },
     {
@@ -569,6 +687,16 @@
     },
     {
       "metadata": {
+        "id": "9Nu_dCIG4G4e",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**'Shoot First Ask Later' is the author with maximum number of 'unreliable' news**"
+      ]
+    },
+    {
+      "metadata": {
         "id": "ZErHRl9iz2VT",
         "colab_type": "code",
         "colab": {
@@ -597,6 +725,16 @@
           },
           "execution_count": 60
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Zq8pJMl94Znn",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "**To make sure that value is unreliable we must use mean as a criteria instead of sum**"
       ]
     },
     {
