--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -1462,7 +1462,20 @@
     },
     {
       "metadata": {
-        "id": "7P4e8OuhqDHh",
+        "id": "NA4qMUAfIdqz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# we can find the caategories of news using unsuperwised learning , in which we can plot graph of category with max no. of fake news !!!"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "IZc9E3O5I_Xb",
         "colab_type": "code",
         "colab": {}
       },
