--- a/Fake_news_classifiers.ipynb
+++ b/Fake_news_classifiers.ipynb
@@ -32,22 +32,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 90
         },
-        "outputId": "39f45c6f-cf2f-44a3-eb62-5b239f2125c8"
+        "outputId": "ca59016b-9329-4db1-ed7d-f780d452fd55"
       },
       "cell_type": "code",
       "source": [
         "!wget https://raw.githubusercontent.com/manan-arya/Fake_News_US/master/kaggle_dataset/train.csv?token=AcjiTfZQHIFYhQ_qKtVo0y6rG3mD71Lcks5bl-ZPwA%3D%3D\n",
         "!wget https://raw.githubusercontent.com/manan-arya/Fake_News_US/master/kaggle_dataset/test.csv?token=AcjiTZknxG_W1-9YmnE6V9HSgBkxaIJgks5bl-aEwA%3D%3D"
       ],
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "\n",
-            "Redirecting output to ‘wget-log’.\n",
+            "Redirecting output to ‘wget-log.2’.\n",
             "\n",
-            "Redirecting output to ‘wget-log.1’.\n"
+            "Redirecting output to ‘wget-log.3’.\n"
           ],
           "name": "stdout"
         }
@@ -78,14 +78,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 198
         },
-        "outputId": "c1914f6b-7a1b-4bd2-ac5a-21f9ba8cbb5f"
+        "outputId": "a8582a41-293e-43b2-c9ca-62f1ade32821"
       },
       "cell_type": "code",
       "source": [
         "train_data=pd.read_csv('train.csv?token=AcjiTfZQHIFYhQ_qKtVo0y6rG3mD71Lcks5bl-ZPwA%3D%3D')\n",
         "train_data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 16
         }
       ]
     },
@@ -192,14 +192,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 198
         },
-        "outputId": "0a36b762-95dd-4cf9-cc77-b86cf3bc93d1"
+        "outputId": "7100364b-65bb-429e-ba6f-b36bc1e84ca0"
       },
       "cell_type": "code",
       "source": [
         "test_data= pd.read_csv('test.csv?token=AcjiTZknxG_W1-9YmnE6V9HSgBkxaIJgks5bl-aEwA%3D%3D')\n",
         "test_data.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +288,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 17
         }
       ]
     },
@@ -337,11 +337,7 @@
       "metadata": {
         "id": "8DH3JCpe4oPz",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "outputId": "6a6227ef-b2fa-4e19-d139-ecf3a31c01b8"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -351,22 +347,8 @@
         "transformed=vectorizer.transform(X)\n",
         "transformed"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<18285x160355 sparse matrix of type '<class 'numpy.int64'>'\n",
-              "\twith 6338616 stored elements in Compressed Sparse Row format>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -376,7 +358,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 18217
         },
-        "outputId": "7dcf24cc-3170-454e-c854-efd4c01eb04f"
+        "outputId": "70563e5b-42cf-477d-b7e4-6c8126de392f"
       },
       "cell_type": "code",
       "source": [
@@ -1473,7 +1455,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 589
         },
-        "outputId": "1ad5e4e4-8526-4bde-b23a-0d17b74e5c23"
+        "outputId": "d8281190-5a55-45b2-87fe-2df455f93954"
       },
       "cell_type": "code",
       "source": [
@@ -1482,8 +1464,7 @@
         "clf_svm.fit(X_train,y_train)\n",
         "preds = clf_svm.predict(X_test)\n",
         "clf_svm.score(X_test, y_test)        \n",
-        "        \n",
-        "plot_decision_regions(X_test,y_test, clf_svm)"
+        "        "
       ],
       "execution_count": 13,
       "outputs": [
@@ -1534,7 +1515,7 @@
         "xgb.fit(X_train,y_train)\n",
         "preds_xgb = xgb.predict(X_test)"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1561,7 +1542,7 @@
         "accuracy = float(np.sum(preds_xgb==y_test))/y_test.shape[0]\n",
         "print(\"accuracy:  \", (accuracy))"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
