--- a/Fake_news_classifiers.ipynb
+++ b/Fake_news_classifiers.ipynb
@@ -337,7 +337,11 @@
       "metadata": {
         "id": "8DH3JCpe4oPz",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "9e57c587-c853-43b2-c160-f5c3473b6570"
       },
       "cell_type": "code",
       "source": [
@@ -347,8 +351,22 @@
         "transformed=vectorizer.transform(X)\n",
         "transformed"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<18285x160355 sparse matrix of type '<class 'numpy.int64'>'\n",
+              "\twith 6338616 stored elements in Compressed Sparse Row format>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
     },
     {
       "metadata": {
@@ -358,13 +376,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 18217
         },
-        "outputId": "70563e5b-42cf-477d-b7e4-6c8126de392f"
+        "outputId": "75d2a67a-991e-4acd-8056-b32d7752eb3a"
       },
       "cell_type": "code",
       "source": [
         "vectorizer.vocabulary_"
       ],
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1376,7 +1394,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 22
         }
       ]
     },
@@ -1453,9 +1471,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
+          "height": 35
         },
-        "outputId": "d8281190-5a55-45b2-87fe-2df455f93954"
+        "outputId": "a136f490-34e0-4c54-ecf8-c2ef6a080c2f"
       },
       "cell_type": "code",
       "source": [
@@ -1466,21 +1484,19 @@
         "clf_svm.score(X_test, y_test)        \n",
         "        "
       ],
-      "execution_count": 13,
+      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-13-77df00cacf8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mclf_svm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mplot_decision_regions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclf_svm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m<ipython-input-12-3545eec31109>\u001b[0m in \u001b[0;36mplot_decision_regions\u001b[0;34m(X, y, classifier, resolution)\u001b[0m\n\u001b[1;32m     11\u001b[0m     xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution),\n\u001b[1;32m     12\u001b[0m                            np.arange(x2_min, x2_max, resolution))\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mZ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mxx1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxx2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mZ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mZ\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxx1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontourf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxx1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxx2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mZ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcmap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    322\u001b[0m             \u001b[0mPredicted\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0mper\u001b[0m \u001b[0msample\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m         \"\"\"\n\u001b[0;32m--> 324\u001b[0;31m         \u001b[0mscores\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    325\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m             \u001b[0mindices\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mscores\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/base.py\u001b[0m in \u001b[0;36mdecision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    303\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    304\u001b[0m             raise ValueError(\"X has %d features per sample; expecting %d\"\n\u001b[0;32m--> 305\u001b[0;31m                              % (X.shape[1], n_features))\n\u001b[0m\u001b[1;32m    306\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    307\u001b[0m         scores = safe_sparse_dot(X, self.coef_.T,\n",
-            "\u001b[0;31mValueError\u001b[0m: X has 2 features per sample; expecting 160355"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9515996718621821"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
         }
       ]
     },
@@ -1506,7 +1522,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 74
         },
-        "outputId": "11712698-cfcb-41ad-edcc-a043e265680e"
+        "outputId": "a490ceb0-c6af-4c7e-d59b-5642c8d9c99d"
       },
       "cell_type": "code",
       "source": [
@@ -1515,7 +1531,7 @@
         "xgb.fit(X_train,y_train)\n",
         "preds_xgb = xgb.predict(X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1535,14 +1551,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "0fcc50d8-2cea-4577-cc8a-6f3829e2b61b"
+        "outputId": "19fc0a6a-58ac-4fa6-e227-845f9dc778a4"
       },
       "cell_type": "code",
       "source": [
         "accuracy = float(np.sum(preds_xgb==y_test))/y_test.shape[0]\n",
         "print(\"accuracy:  \", (accuracy))"
       ],
-      "execution_count": 0,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1555,7 +1571,178 @@
     },
     {
       "metadata": {
+        "id": "yDnji64FmdOF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import (RandomForestClassifier,ExtraTreesClassifier,AdaBoostClassifier)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "uG3j2GlWgwze",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c068b673-a321-40eb-c141-c1e35d194ab4"
+      },
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "clf_rf=RandomForestClassifier()\n",
+        "\n",
+        "clf_rf.fit(X_train,y_train)\n",
+        "\n",
+        "preds_rf=clf_rf.predict(X_test)\n",
+        "\n",
+        "clf_rf.score(X_test,y_test)\n"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8348372983319661"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YvU9LGZnl_tX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c031fa1d-7119-4093-9288-1c14545aa69b"
+      },
+      "cell_type": "code",
+      "source": [
+        "clf_xt=ExtraTreesClassifier()\n",
+        "\n",
+        "clf_xt.fit(X_train,y_train)\n",
+        "\n",
+        "preds_xt=clf_xt.predict(X_test)\n",
+        "\n",
+        "clf_xt.score(X_test,y_test)\n"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8394859174186492"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "CfNQ7sj_nlNc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e1a58bf3-bdd7-4356-a194-6e1c5b493316"
+      },
+      "cell_type": "code",
+      "source": [
+        "clf_ada=AdaBoostClassifier()\n",
+        "\n",
+        "clf_ada.fit(X_train,y_train)\n",
+        "\n",
+        "preds_ada=clf_ada.predict(X_test)\n",
+        "\n",
+        "clf_ada.score(X_test,y_test)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9346458846048674"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Pmkj4qPAoAKl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "D5uBG7k3oax8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "83e0f26c-d8f3-4fb7-d829-ddd87f92d687"
+      },
+      "cell_type": "code",
+      "source": [
+        "clf_lr=LogisticRegression()\n",
+        "\n",
+        "clf_lr.fit(X_train,y_train)\n",
+        "\n",
+        "preds_lr=clf_lr.predict(X_test)\n",
+        "\n",
+        "clf_lr.score(X_test,y_test)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9622641509433962"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "2podDv11o-vn",
         "colab_type": "code",
         "colab": {}
       },
