Tfidf and Cross Validation

--- a/Fake_news_classifiers.ipynb
+++ b/Fake_news_classifiers.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -32,14 +33,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 90
         },
-        "outputId": "ca59016b-9329-4db1-ed7d-f780d452fd55"
+        "outputId": "1907fcbe-8c39-45a8-e096-4b05db73e729"
       },
       "cell_type": "code",
       "source": [
         "!wget https://raw.githubusercontent.com/manan-arya/Fake_News_US/master/kaggle_dataset/train.csv?token=AcjiTfZQHIFYhQ_qKtVo0y6rG3mD71Lcks5bl-ZPwA%3D%3D\n",
         "!wget https://raw.githubusercontent.com/manan-arya/Fake_News_US/master/kaggle_dataset/test.csv?token=AcjiTZknxG_W1-9YmnE6V9HSgBkxaIJgks5bl-aEwA%3D%3D"
       ],
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,14 +79,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 198
         },
-        "outputId": "a8582a41-293e-43b2-c9ca-62f1ade32821"
+        "outputId": "8e8e973e-a4a8-4f4f-f736-8b5e4eff3e64"
       },
       "cell_type": "code",
       "source": [
         "train_data=pd.read_csv('train.csv?token=AcjiTfZQHIFYhQ_qKtVo0y6rG3mD71Lcks5bl-ZPwA%3D%3D')\n",
         "train_data.head()"
       ],
-      "execution_count": 16,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +181,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 26
         }
       ]
     },
@@ -192,14 +193,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 198
         },
-        "outputId": "7100364b-65bb-429e-ba6f-b36bc1e84ca0"
+        "outputId": "dfd5f201-f3a8-468e-fa29-58f04b37e87f"
       },
       "cell_type": "code",
       "source": [
         "test_data= pd.read_csv('test.csv?token=AcjiTZknxG_W1-9YmnE6V9HSgBkxaIJgks5bl-aEwA%3D%3D')\n",
         "test_data.head()"
       ],
-      "execution_count": 17,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +289,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 27
         }
       ]
     },
@@ -341,7 +342,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "9e57c587-c853-43b2-c160-f5c3473b6570"
+        "outputId": "21e6007e-9559-4b3e-940a-5523d16e07f9"
       },
       "cell_type": "code",
       "source": [
@@ -351,7 +352,7 @@
         "transformed=vectorizer.transform(X)\n",
         "transformed"
       ],
-      "execution_count": 21,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +365,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 31
         }
       ]
     },
@@ -376,13 +377,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 18217
         },
-        "outputId": "75d2a67a-991e-4acd-8056-b32d7752eb3a"
+        "outputId": "ac43b3c6-8b11-4d8c-de3f-3affa6c9586e"
       },
       "cell_type": "code",
       "source": [
         "vectorizer.vocabulary_"
       ],
-      "execution_count": 22,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1394,7 +1395,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 32
         }
       ]
     },
@@ -1428,52 +1429,13 @@
     },
     {
       "metadata": {
-        "id": "aNiRw-0EbwFv",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "def plot_decision_regions(X, y, classifier, resolution=0.02):\n",
-        "\n",
-        "    # setup marker generator and color map\n",
-        "    markers = ('s', 'x', 'o', '^', 'v')\n",
-        "    colors = ('red', 'blue', 'lightgreen', 'gray', 'cyan')\n",
-        "    cmap = ListedColormap(colors[:len(np.unique(y))])\n",
-        "\n",
-        "    # plot the decision surface\n",
-        "    x1_min, x1_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
-        "    x2_min, x2_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
-        "    xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution),\n",
-        "                           np.arange(x2_min, x2_max, resolution))\n",
-        "    Z = classifier.predict(np.array([xx1.ravel(), xx2.ravel()]).T)\n",
-        "    Z = Z.reshape(xx1.shape)\n",
-        "    plt.contourf(xx1, xx2, Z, alpha=0.3, cmap=cmap)\n",
-        "    plt.xlim(xx1.min(), xx1.max())\n",
-        "    plt.ylim(xx2.min(), xx2.max())\n",
-        "\n",
-        "    # plot class samples\n",
-        "    for idx, cl in enumerate(np.unique(y)):\n",
-        "        plt.scatter(x=X[y == cl, 0],\n",
-        "                    y=X[y == cl, 1],\n",
-        "                    alpha=0.8,\n",
-        "                    c=colors[idx],\n",
-        "                    marker=markers[idx],\n",
-        "                    label=cl,\n",
-        "                    edgecolor='black')\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "d5AcETbDcArC",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a136f490-34e0-4c54-ecf8-c2ef6a080c2f"
+        "outputId": "5ebce3e2-8110-43ca-b9cc-702663fbe3e8"
       },
       "cell_type": "code",
       "source": [
@@ -1484,7 +1446,7 @@
         "clf_svm.score(X_test, y_test)        \n",
         "        "
       ],
-      "execution_count": 26,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1496,7 +1458,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 35
         }
       ]
     },
@@ -1522,7 +1484,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 74
         },
-        "outputId": "a490ceb0-c6af-4c7e-d59b-5642c8d9c99d"
+        "outputId": "87c33486-e464-4d92-fd3b-4cbfc08d5e9d"
       },
       "cell_type": "code",
       "source": [
@@ -1531,7 +1493,7 @@
         "xgb.fit(X_train,y_train)\n",
         "preds_xgb = xgb.predict(X_test)"
       ],
-      "execution_count": 28,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -1551,14 +1513,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "19fc0a6a-58ac-4fa6-e227-845f9dc778a4"
+        "outputId": "ec17d7f6-3b0d-4eab-ab9e-f8b8660b7569"
       },
       "cell_type": "code",
       "source": [
         "accuracy = float(np.sum(preds_xgb==y_test))/y_test.shape[0]\n",
         "print(\"accuracy:  \", (accuracy))"
       ],
-      "execution_count": 29,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,7 +1552,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c068b673-a321-40eb-c141-c1e35d194ab4"
+        "outputId": "3e4e4a5e-9746-4cc3-9733-ae32ee09a551"
       },
       "cell_type": "code",
       "source": [
@@ -1603,19 +1565,19 @@
         "\n",
         "clf_rf.score(X_test,y_test)\n"
       ],
-      "execution_count": 30,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8348372983319661"
+              "0.8465955701394585"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 40
         }
       ]
     },
@@ -1627,7 +1589,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "c031fa1d-7119-4093-9288-1c14545aa69b"
+        "outputId": "e66f9e40-6eaf-4ffd-8dbb-483d5c49a72a"
       },
       "cell_type": "code",
       "source": [
@@ -1639,19 +1601,19 @@
         "\n",
         "clf_xt.score(X_test,y_test)\n"
       ],
-      "execution_count": 33,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.8394859174186492"
+              "0.8433141919606235"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 41
         }
       ]
     },
@@ -1663,7 +1625,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "e1a58bf3-bdd7-4356-a194-6e1c5b493316"
+        "outputId": "70842017-a330-4d5a-df70-7414b4f9335f"
       },
       "cell_type": "code",
       "source": [
@@ -1675,7 +1637,7 @@
         "\n",
         "clf_ada.score(X_test,y_test)"
       ],
-      "execution_count": 34,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1687,7 +1649,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 42
         }
       ]
     },
@@ -1712,7 +1674,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "83e0f26c-d8f3-4fb7-d829-ddd87f92d687"
+        "outputId": "728084e4-3635-43f3-ff47-b4104cd50855"
       },
       "cell_type": "code",
       "source": [
@@ -1724,7 +1686,7 @@
         "\n",
         "clf_lr.score(X_test,y_test)"
       ],
-      "execution_count": 36,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1736,7 +1698,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 44
         }
       ]
     },
@@ -1744,14 +1706,140 @@
       "metadata": {
         "id": "2podDv11o-vn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "32b6ffa8-8f08-417b-bd7b-82fc49ef5ace"
       },
       "cell_type": "code",
       "source": [
-        ""
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "tfidf = TfidfVectorizer()\n",
+        "transformed_tfidf = tfidf.fit_transform(X)\n",
+        "transformed_tfidf"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<18285x160355 sparse matrix of type '<class 'numpy.float64'>'\n",
+              "\twith 6338616 stored elements in Compressed Sparse Row format>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "DxZt7UstsYgq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "bc5cca40-c72e-433e-908e-177ee3f65241"
+      },
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(transformed_tfidf,y, test_size=0.2, random_state=24)\n",
+        "\n",
+        "from sklearn.svm import SVC\n",
+        "\n",
+        "\n",
+        "clf= SVC(kernel=\"linear\")\n",
+        "clf.fit(X_train, y_train)\n",
+        "preds = clf.predict(X_test)\n",
+        "\n",
+        "\n",
+        "(preds == y_test).sum()/len(y_test)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9636313918512441"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "-NrP6mEb39E1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "590bb2c7-8cf0-459d-f8d7-9d119638675f"
+      },
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "cross_val_score(clf,transformed_tfidf, y, cv=5).mean()"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9646159090028386"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "hCMTFa1fs0WI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f05d8c35-9ca8-4442-b7ce-fb28a94738cc"
+      },
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import cross_val_score\n",
+        "\n",
+        "cross_val_score(clf_lr,X_train, y_train, cv=5).mean()"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9441479222531853"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
     }
   ]
 }
